# maelstrom

./: .dockerignore  .env-example  .env-test  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.complement  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT.md  README.md  Settings-example.toml  Settings-example.yml  Settings.toml  VERIFICATION.md  docker-compose.cluster.yml  docker-compose.dev.yml  docker-compose.yml  sample-private.pem
.github/workflows/: build.yml  ci.yml
config/: Caddyfile.cluster  example.toml
crates/maelstrom-admin/: Cargo.toml  askama.toml
crates/maelstrom-admin/src/: auth.rs  lib.rs  router.rs  templates.rs
crates/maelstrom-admin/src/handlers/: dashboard.rs  federation.rs  media.rs  mod.rs  reports.rs  rooms.rs  server.rs  users.rs
crates/maelstrom-admin/static/css/: admin.css
crates/maelstrom-admin/templates/: base.html
crates/maelstrom-admin/templates/pages/: dashboard.html  federation.html  rooms.html  users.html
crates/maelstrom-api/: Cargo.toml
crates/maelstrom-api/src/: appservice.rs  gossip.rs  lib.rs  router.rs  state.rs
crates/maelstrom-api/src/extractors/: auth.rs  json.rs  mod.rs
crates/maelstrom-api/src/handlers/: account.rs  appservice.rs  auth.rs  capabilities.rs  directory.rs  events.rs  health.rs  keys.rs  knock.rs  media.rs  mod.rs  presence.rs  profile.rs  receipts.rs  register.rs  relations.rs  reporting.rs  rooms.rs  search.rs  spaces.rs  sync.rs  threads.rs  to_device.rs  typing.rs  util.rs  versions.rs  wellknown.rs
crates/maelstrom-api/src/middleware/: mod.rs  rate_limit.rs
crates/maelstrom-api/src/notify/: mod.rs
crates/maelstrom-core/: Cargo.toml
crates/maelstrom-core/src/: ephemeral.rs  error.rs  identifiers.rs  lib.rs
crates/maelstrom-core/src/events/: mod.rs  pdu.rs
crates/maelstrom-core/src/matrix/: content.rs  edu.rs  ephemeral.rs  error.rs  event.rs  id.rs  json.rs  keys.rs  mod.rs  room.rs  signing.rs  state.rs
crates/maelstrom-core/src/signatures/: keys.rs  mod.rs
crates/maelstrom-core/src/state/: mod.rs
crates/maelstrom-federation/: Cargo.toml
crates/maelstrom-federation/src/: backfill.rs  client.rs  invite.rs  joins.rs  key_server.rs  lib.rs  queries.rs  receiver.rs  router.rs  sender.rs  signing.rs  state.rs  user_keys.rs
crates/maelstrom-media/: Cargo.toml
crates/maelstrom-media/src/: client.rs  lib.rs  preview.rs  retention.rs  thumbnail.rs
crates/maelstrom-storage/: Cargo.toml
crates/maelstrom-storage/src/: lib.rs  mock.rs  traits.rs
crates/maelstrom-storage/src/surreal/: account_data.rs  appservice.rs  connection.rs  devices.rs  events.rs  federation.rs  keys.rs  media.rs  mod.rs  receipts.rs  relations.rs  rooms.rs  schema.rs  users.rs
db/: schema.surql
schema/: postgres.sql
scripts/: complement-start.sh  complement.sh
src/: main.rs
src/config/: mod.rs
src/configuration/: mod.rs
src/db/: mock.rs  mod.rs  postgres.rs
src/models/: account.rs  auth.rs  mod.rs  profile.rs  registration.rs
src/server/: api.rs  error.rs  mod.rs  routes.rs  server.rs
src/server/handlers/: account.rs  admin.rs  auth.rs  mod.rs  profile.rs  registration.rs
src/server/middleware/: auth_checker.rs  mod.rs
src/util/: crypto.rs  mod.rs  serde.rs
tests/: account_test.rs  admin_test.rs  auth_test.rs  error_test.rs  events_test.rs  federation_test.rs  health_test.rs  identifiers_test.rs  keys_test.rs  media_test.rs  phase8_test.rs  profile_test.rs  register_test.rs  rooms_test.rs  sync_test.rs  versions_test.rs  wellknown_test.rs
tests/common/: mod.rs
tests/storage/: mock_test.rs  mod.rs
