[package]
name = "maelstrom"
version = "0.1.0"
authors = ["Chris Bruce <chris@chrisbruce.com>", "Aiden McClelland <me@drbonez.dev>"]
edition = "2018"


[dependencies]
actix-cors = "0.2.0"
actix-ratelimit = "0.2"
actix-rt = "1.0"
actix-web-httpauth = "0.4"
actix-web = "2.0"
anyhow = "1.0"
async-trait = "0.1.30"
config = { version = "0.10", default-features = false, features = [ "yaml" ] }
env_logger = "0.7"
jsonwebtoken = "7.1.0"
lazy_static = "1.4.0"
linear-map = { version = "1.2.0", features = ["serde_impl"] }
log = { version = "0.4" }
pem = "0.7.0"
rand = "0.7.3"
ring = "0.16.12"
ruma-identifiers = {version = "0.15", features = [ "rand", "serde" ] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "sqlite" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
