[workspace]
resolver = "2"
members = [
    "crates/maelstrom-core",
    "crates/maelstrom-storage",
    "crates/maelstrom-media",
    "crates/maelstrom-api",
    "crates/maelstrom-federation",
    "crates/maelstrom-admin",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/maelstrom-rs/maelstrom"

[workspace.dependencies]
# Internal crates
maelstrom-core = { path = "crates/maelstrom-core" }
maelstrom-storage = { path = "crates/maelstrom-storage" }
maelstrom-media = { path = "crates/maelstrom-media" }
maelstrom-api = { path = "crates/maelstrom-api" }
maelstrom-federation = { path = "crates/maelstrom-federation" }
maelstrom-admin = { path = "crates/maelstrom-admin" }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "request-id", "util", "fs", "normalize-path"] }
http = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
surrealdb = { version = "3", features = ["kv-mem"] }

# S3 / Media
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Crypto
argon2 = "0.5"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"

# Cluster gossip
chitchat = "0.10"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Image processing
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# HTTP client (for URL preview)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "json"] }

# HTML parsing (for OG metadata)
scraper = "0.22"

# Templating (admin dashboard)
askama = "0.13"

# System info (admin healthcheck)
sysinfo = "0.33"

# Utilities
dashmap = "6"
futures = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "maelstrom"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
maelstrom-api = { workspace = true }
maelstrom-admin = { workspace = true }
maelstrom-core = { workspace = true }
maelstrom-storage = { workspace = true }
maelstrom-media = { workspace = true }
maelstrom-federation = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chitchat = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
chrono = { workspace = true }

# Optimize deps in dev builds for faster runtime (slower initial compile, but deps are cached)
[profile.dev.package."*"]
opt-level = 1

# Fast release builds
[profile.release]
lto = "thin"
codegen-units = 1
