[package]
name = "maelstrom-federation"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
maelstrom-core = { workspace = true }
maelstrom-storage = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
