[package]
name = "maelstrom-federation"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
maelstrom-core = { workspace = true }
maelstrom-storage = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }
