[package]
name = "maelstrom-media"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
maelstrom-core = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
