[package]
name = "maelstrom-media"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
maelstrom-core = { workspace = true }
maelstrom-storage = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
