[package]
name = "maelstrom-storage"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
maelstrom-core = { workspace = true }
surrealdb = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
